system/drone/templates/drone-kube-runner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-kube-runner
  namespace: drone
  labels:
    app.kubernetes.io/name: drone-kube-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-kube-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-kube-runner
    spec:
      containers:
        - name: runner
          image: drone/drone-runner-kube:latest
          ports:
            - containerPort: 3000
