system/drone/templates/secret-plugin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-secret-plugin
  namespace: drone
  labels:
    app.kubernetes.io/name: drone-secret-plugin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-secret-plugin
  template:
    metadata:
      labels:
        app: drone-secret-plugin
    spec:
      containers:
        - name: plugin-secret
          image: drone/kubernetes-secrets:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drone-secret
  namespace: drone
spec:
  selector:
    app.kubernetes.io/name: drone-secret-plugin
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
