system/drone/templates/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drone
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drone.simonmalm.com`)
      kind: Rule
      services:
        - name: drone
          port: 80
    - match: Host(`drone.local.simonmalm.com`)
      kind: Rule
      services:
        - name: drone
          port: 80

  tls:
    secretName: simonmalm-com-tls
